Polish TestKit integration and remove environment vars support
ENV vars were not being used in the CLI executor, and are not supported
by TestKit, so this was removed from all areas.